Adjust test enginge setup.